--- a/k8s/demo-app/app.yaml
+++ b/k8s/demo-app/app.yaml
@@ -11,8 +11,7 @@ metadata:
   labels:
     app: demo-app
 spec:
-  replicas: 1
-  selector:
+  replicas: 22  selector:
     matchLabels:
       app: demo-app
   template:
