--- a/k8s/demo-app/app.yaml
+++ b/k8s/demo-app/app.yaml
@@ -11,7 +11,8 @@ metadata:
   labels:
     app: demo-app
 spec:
-  replicas: 22  selector:
+  replicas: 2                # 원하는 복제 수 (2로 맞춰둠)
+  selector:
     matchLabels:
       app: demo-app
   template:
@@ -21,7 +22,7 @@ spec:
     spec:
       containers:
         - name: demo-app
-          image: nginx:1.27      # 그냥 nginx 띄우는 예제
+          image: nginx:1.27  # nginx 예제 이미지
           ports:
             - containerPort: 80
 ---
@@ -31,9 +32,9 @@ metadata:
   name: demo-app
   namespace: demo-app
 spec:
-  type: LoadBalancer           # 외부에서 접속 가능한 LB 서비스
+  type: LoadBalancer
   selector:
     app: demo-app
   ports:
-    - port: 80                 # 서비스 포트
-      targetPort: 80           # 파드 포트
+    - port: 80
+      targetPort: 80
